# fido

./: Cargo.toml  Dioxus.toml  diff.txt  index.html
.github/workflows/: ci.yml
landing/: index.html
public/: app.css  login.css
shell/: Cargo.toml  Dioxus.toml  index.html
shell/examples/: web_components.rs
shell/public/: app.css  fido_components.js  normalize.css
shell/public/web_components/: prompt.js  status.js  window.js
shell/src/: accounts.rs  chat.rs  communities.rs  contacts.rs  fido_elements.rs  forum.rs  funds.rs  help.rs  home.rs  lib.rs  main.rs  news.rs  profile.rs  purchases.rs  settings.rs  term.rs  terminal.rs  wiki.rs
src/: lib.rs  main.rs
src/components/atoms/: attach.rs  avatar.rs  button.rs  card.rs  community.rs  header.rs  header_main.rs  helper.rs  input.rs  input_money.rs  loading_status.rs  menu_item.rs  message.rs  message_reply.rs  mod.rs  notification.rs  room.rs  room_skeleton.rs  space.rs  space_skeleton.rs  spinner.rs  textarea.rs  user.rs
src/components/atoms/icons/: arrow_down_circle.rs  arrow_left.rs  arrow_up_circle.rs  attachment.rs  chart.rs  chat_conversation.rs  chevron_right.rs  close.rs  copy.rs  dollar.rs  edit.rs  exit.rs  file_download.rs  group.rs  icon.rs  layers.rs  log_out.rs  menu_hamburguer.rs  mod.rs  new_chat.rs  reply.rs  search.rs  send.rs  trash.rs  user_circle.rs  warning.rs
src/components/atoms/messages/: file.rs  hover_menu.rs  message.rs  message_reply.rs  message_skeleton.rs  mod.rs
src/components/molecules/: attach_preview.rs  guest.rs  helpers.rs  input_message.rs  list.rs  menu.rs  mod.rs  modal.rs  payment_preview.rs  rooms.rs
src/components/organisms/: chat.rs  login.rs  login_form.rs  login_old.rs  mod.rs  nav.rs
src/components/organisms/chat/: active_room.rs  mod.rs  (+2 more)
src/hooks/: use_attach.rs  use_auth.rs  use_chat.rs  use_client.rs  use_init_app.rs  use_lifecycle.rs  use_listen_invitation.rs  use_listen_message.rs  use_listen_payment.rs  use_listen_verification.rs  use_messages.rs  use_modal.rs  use_notification.rs  use_public.rs  use_reply.rs  use_room.rs  use_room_preview.rs  use_rooms.rs  use_send_attach.rs  use_send_message.rs  use_session.rs  use_thread.rs
src/hooks/factory/: message_factory.rs  mod.rs
src/locales/: en-US.json  es-ES.json
src/pages/: home.rs  login.rs  mod.rs  route.rs  signup.rs  welcome.rs
src/pages/chat/: chat.rs  chat_list.rs  chat_room.rs  mod.rs
src/pages/profile/: balance.rs  mod.rs  profile.rs  verify.rs
src/services/: matrix.rs
src/utils/: get_element.rs  get_homeserver.rs  get_param.rs  i18n_get_key_value.rs  matrix.rs  nice_bytes.rs  sync_room.rs  vec_to_url.rs
(+17 files in other folders)
