[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = { version = "0.2.1", features = ["color"] }
dioxus = "0.3"
dioxus-web = "0.3"
dioxus-logger = "0.3.0"
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master", version = "0.3.0" }
futures-util = "0.3.27"
futures = "0.3"
gloo = "0.8.0"
log = "0.4.17"
matrix-sdk = { version = "0.6.2", default-features = false, features = ["js", "native-tls", "e2e-encryption", "indexeddb", "experimental-timeline"] }
tokio = "1.27.0"
url = "2.3.1"
web-sys = {version = "0.3.61", features = ["Document", "Element", "HtmlElement", "HtmlBodyElement", "Node", "NodeList", "Window", "console"]}
time = "0.3.22"
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master", version = "0.3.3" }
anyhow = "1"
serde = "1.0.96"
mime = "0.3.17"
js-sys = "0.3.64"
wasm-bindgen = "0.2.55"
dioxus-std = { git = "https://github.com/DioxusLabs/dioxus-std", version = "0.2.1", features = ["i18n"] }
serde_json = "1.0.103"
