[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0", features = ["web"] }
dioxus-router = "0.5.0"
dioxus-logger = "0.4.1"
dioxus-std = { git = "https://github.com/DioxusLabs/dioxus-std", branch = "master", features = [
    "i18n",
] }

futures-util = "0.3.27"
futures = "0.3"
gloo = "0.8.0"
matrix-sdk = { version = "0.6.2", default-features = false, features = [
    "js",
    "native-tls",
    "e2e-encryption",
    "indexeddb",
    "experimental-timeline",
] }
tokio = "1.27.0"
url = "2.3.1"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlBodyElement",
    "Node",
    "NodeList",
    "Window",
    "console",
    "CssStyleDeclaration",
    "Location",
    "Navigator",
] }
time = "0.3.22"
anyhow = "1"
serde = { version = "1.0.96", features = ["derive"] }
mime = "0.3.17"
js-sys = "0.3.64"
wasm-bindgen = "0.2.55"
serde_json = "1.0.103"
chrono = "0.4.26"
infer = "0.15.0"
ruma = { version = "0.7.4", features = [
    "unstable-sanitize",
    "unstable-msc2677",
    "unstable-msc3440",
    "client",
    "events",
] }
uuid = "0.8"
unic-langid = "0.9.1"
reqwest = "0.11"
http = "0.2"

log = "0.4.19"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
format = "0.2.4"
